new readme bug fin in SpriteBoard.java